RESOLVED FIXED181728
WebDriver: test imported/selenium/py/test/selenium/webdriver/common/api_example_tests.py::testChangeWindowSize fails
https://bugs.webkit.org/show_bug.cgi?id=181728
Summary WebDriver: test imported/selenium/py/test/selenium/webdriver/common/api_examp...
Carlos Garcia Campos
Reported 2018-01-17 04:28:54 PST
______________________________________________________________________________ testChangeWindowSize[WebKitGTK] _______________________________________________________________________________ driver = <selenium.webdriver.webkitgtk.webdriver.WebDriver (session="55a90daf-a104-43fd-99a2-8ede90cfff99")>, pages = <conftest.Pages object at 0x7fb8aec811d0> def testChangeWindowSize(driver, pages): pages.load("blank.html") size = driver.get_window_size() newSize = [600, 600] if size['width'] == 600: newSize[0] = 500 if size['height'] == 600: newSize[1] = 500 driver.set_window_size(newSize[0], newSize[1]) size = driver.get_window_size() > assert size['width'] == newSize[0] E assert 600 == 500 driver = <selenium.webdriver.webkitgtk.webdriver.WebDriver (session="55a90daf-a104-43fd-99a2-8ede90cfff99")> newSize = [500, 600] pages = <conftest.Pages object at 0x7fb8aec811d0> size = {'height': 0, 'width': 600} WebDriverTests/imported/selenium/py/test/selenium/webdriver/common/api_example_tests.py:284: AssertionError
Attachments
Patch (5.53 KB, patch)
2018-01-23 01:15 PST, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2018-01-23 01:10:17 PST
*** Bug 181734 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 2 2018-01-23 01:10:24 PST
*** Bug 180416 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 3 2018-01-23 01:10:31 PST
*** Bug 180417 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 4 2018-01-23 01:10:37 PST
*** Bug 180419 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 5 2018-01-23 01:15:51 PST
Carlos Garcia Campos
Comment 6 2018-01-23 01:43:56 PST
Radar WebKit Bug Importer
Comment 7 2018-01-23 01:45:17 PST
Note You need to log in before you can comment on or make changes to this bug.